[tool.poetry]
name = "tmbed"
version = "1.0.0"
description = "Transmembrane protein predictor using embeddings"
authors = ["Michael Bernhofer <Michael.Bernhofer@tum.de>"]
license = "Apache-2.0"
readme = "README.md"
include = ["LICENSE", "tmbed/models/cnn/*.pt"]

[tool.poetry.scripts]
tmbed = "tmbed.tmbed:run"

[tool.poetry.dependencies]
python = "^3.9"
h5py = "^3.2.1"
numpy = "^1.20.3"
sentencepiece = "^0.1.96"
torch = "^1.10.2"
tqdm = "^4.62.3"
transformers = "^4.11.3"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
