[tool.poetry]
name = "tmbed"
version = "1.0.0"
description = "Transmembrane protein predictor using embeddings"
authors = ["Michael Bernhofer <Michael.Bernhofer@tum.de>"]
license = "Apache-2.0"
readme = "README.md"
include = ["LICENSE", "tmbed/models/cnn/*.pt"]

[tool.poetry.scripts]
tmbed = "tmbed.tmbed:run"

[tool.poetry.dependencies]
python = "^3.13"
h5py = "^3.13"
numpy = "^2.2"
torch = "^2.5"
tqdm = "^4.67"
transformers = "^4.50"
typer = "^0.15"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
